# cato

./: .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CMakeLists.txt  Changelog.md  Contributing.md  LICENSE  README.md  TODO.md  Untitled.ipynb  cmake-variants.yaml  docs.md
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/mpi-test/: mpi_hello_world.f90  test.sh
cmake/: AddCoarrayCTest.cmake  FindCoarray.cmake  FindPythonModule.cmake  GetGitRevisionDescription.cmake  OptimizeForArchitecture.cmake  SetCompileFlag.cmake  SetFortranFlags.cmake
include/: fytest.fypp  version.h.in
misc/: generate_initial_grid.ipynb  grid_layout.pptx  mach_cone_testing.ipynb
papers/: Readme.md  method_explanation.pptx
pycato/: __init__.py  generate_initial_grids.py  input_deck.py  load_datasets.py  unit_registry.py
scripts/: __init__.py  clean_src.sh  config_mbp.sh  fvleg_testing.py  generate_initial_grids.py  hpc_config.sh  hpc_submit.sh  install_pfunit.sh  load_dataset_paraview.py  load_datasets.py  memcheck.sh  profile.sh  unit_registry.py  vtune_profile.sh
src/: CMakeLists.txt  main.f90
src/lib/: equation_of_state.f90  error.f90  floating_point_utilities.f90  globals.f90  hermetic.f90  integrand.f90  mach_cone_geometry.f90  math_constants.f90  mod_collectives.f90  mod_parallel.f90  mod_timing.f90  non_dimensional.f90  reconstruction.f90  slope_limiter.f90  units.f90
src/lib/boundary_conditions/: bc_factory.f90  boundary_conditions.f90  farfield.f90  inlet_outlet.f90  outflow_bc.f90  outlet_bc.f90  periodic_bc.f90  periodic_bc.fypp  pressure_input_bc.f90  reflection_bc.f90  symmetry_bc.f90  vacuum_bc.f90  zero_gradient_bc.f90
src/lib/domain/: conserved_vars.f90  fluxes.f90  grid.f90  grid_factory.f90  grid_type.f90  regular_2d_grid.f90
src/lib/evolution_operator/: abstract_evo_operator.f90  evo_operator_factory.f90  local_evo_operator.f90
src/lib/field/: field_2d.f90  field_2d_cpu_operators.f90  field_2d_gpu_operators.f90
src/lib/finite_volume_scheme/: fv_scheme.f90  fvleg.f90  global_fluid.f90  local_fluid.f90  mod_fluid.f90
src/lib/fluid/: ausm_fluid.f90  base_fluid.f90  flux_array.f90  fluxes.f90  fvleg_fluid.f90  mod_fluid.f90  mod_global_fluid.f90  mod_local_fluid.f90
src/lib/flux_solvers/: ausm_plus_solver.f90  ausm_plus_up_solver.f90  ausm_solver.f90  ausmpw_plus_solver.fypp  flux_solver.f90  fvleg_solver.f90  hllc_solver.fypp  m_asumpw_plus_solver.f90  m_ausmpw_plus_solver.f90  m_ausmpw_plus_solver.fypp  roe_solver.fypp  roe_solver_new.fypp  slau_solver.fypp
src/lib/geometry/: cone.f90  corner_mach_cone.f90  geometry.f90  intersections.f90  mach_cone.f90  mach_cone_abstract.f90  mach_cone_collection.f90  mach_cone_geometry.f90  mach_cone_utilities.f90  midpoint_mach_cone.f90  quad_cell.f90  vector.f90  vector_2d.f90
src/lib/grid/: grid_block.f90  grid_block_1d.f90  grid_block_2d.f90  grid_block_3d.f90  grid_factory.f90  grid_type.f90  regular_2d_grid.f90
src/lib/integrators/: heun_2nd_order.f90  ralston_2nd_order.f90  runge_kutta_2nd_order.f90  ssp_runge_kutta_2nd_order.f90  ssp_runge_kutta_3rd_order.f90  strategy.f90  surrogate.f90  time_integrator_factory.f90
src/lib/io/: contour_writer.f90  mod_hdf5.f90  mod_input.f90  mod_netcdf.f90  mod_xdmf.f90
src/lib/limiters/: e_mlp_distinguisher.fypp  flux_limiter.f90  gnoffo_aux_limiter.f90  post_limiter.f90  slope_limiter.f90
src/lib/mach_cone/: mach_cone_collection.f90  mach_cone_utilities.f90
src/lib/master_puppeteer/: master_puppeteer.f90
src/lib/reconstruction/: abstract_reconstruction.f90  first_order_reconstruction.f90  gradients.f90  reconstruction_factory.f90  second_order_dbl_reconstruction.f90  second_order_mgg_reconstruction.f90  second_order_reconstruction.f90  second_order_sgg_reconstruction.f90  second_order_sgg_structured_reconstruction.f90
src/lib/riemann_solvers/: ausm_solver.f90  fvleg_solver.f90  riemann_solver.f90
src/lib/source_terms/: energy_source.f90  force_source.f90  mod_source.f90  pressure_source.f90  source_factory.f90
src/lib/spatial_reconstruction/: abstract_reconstruction.f90  edge_interpolation.f90  edge_interpolator.f90  edge_interpolator_factory.f90  edge_reconstruction.f90  first_order_reconstruction.f90  gradients.f90  high_order_tvd_interpolation.f90  mlp_3rd_order.f90  mlp_5th_order.f90  mlp_baseline.f90  mlp_edge_interpolation.f90  mlp_wave_ext_4th_order.f90  muscl_e_mlp.fypp  muscl_factory.f90  muscl_interpolation.f90  muscl_mlp.fypp  muscl_mlp3.fypp  muscl_tvd2.fypp  muscl_tvd3.fypp  muscl_tvd5.fypp  piecewise_constant.f90  piecewise_linear.f90  reconstruction_factory.f90  second_order_sgg_reconstruction.f90  second_order_sgg_structured_reconstruction.f90  tvd_2nd_order.f90  tvd_3rd_order.f90  tvd_5th_order.f90
src/lib/time_integrators/: heun_2nd_order.f90  ralston_2nd_order.f90  ssp_rk2.f90  ssp_rk3.f90  ssp_runge_kutta_3rd_order.f90  time_integrator_factory.f90
tests/unit/: CMakeLists.txt  caf_testing.f90  caf_testing.fypp  make_simple_grid.py  simple.h5
tests/unit/test_bc/: CMakeLists.txt  mod_test_bc.f90  test_bc.f90  test_bc.pf
tests/unit/test_evo_operators/: CMakeLists.txt  test_evo_operator.pf
tests/unit/test_field/: CMakeLists.txt  make_h5.py  test_field.f90
tests/unit/test_fv_schemes/: CMakeLists.txt  test_fvleg.pf
tests/unit/test_geometry/: CMakeLists.txt  make_simple_grid.py  mod_test_grid.f90  simple.h5  test_cone.pf  test_grid.f90  test_grid.pf  test_intersections.pf  test_mach_cone_collection.pf  test_mach_cone_geometry.pf  test_quad_cell.pf  test_vector.pf
tests/unit/test_interpolation/: CMakeLists.txt  test_linear_interp.pf  test_nearest.pf
tests/unit/test_limiters/: CMakeLists.txt  test_limiters.f90  test_limiters.pf
tests/unit/test_mach_cones/: CMakeLists.txt  test_mach_cone_collection.pf
tests/unit/test_misc/: CMakeLists.txt  test_fluxes.pf
tests/unit/test_parallel/: test_coarray.f90  test_parallel.pf
tests/unit/test_reconstruction/: CMakeLists.txt  test_gradients.pf  test_reconstruction.pf
tests/unit/test_slope_limiters/: CMakeLists.txt  test_slope_limiters.pf
(+146 files in other folders)
